--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ plate </a></br>
 WAVEWATCH III: An intercomparison analysis </h1>
         <p align="center"> <strong> Fabien Montiel </strong></span>, Lloyd Dafydd;</p>
         <p align="center"> University of Otago, New Zealand </p>
-        <center><a href="mailto:fabien.montiel@otago.ac.nz" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;">richard.porter@bris.ac.uk</a></span></br></center>
+        <center><a href="mailto:fabien.montiel@otago.ac.nz" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;">fabien.montiel@otago.ac.nz</a></span></br></center>
         <p align="center"> Abstract </p>
         <div style="font-family: 'Times New Roman'; font-size: 20px ; text-align: justify;">
             Waves-in-ice measurements are presented, obtained with a shipborne stereoscopic camera system in the Antarctic marginal ice zone during an extreme polar cyclone.
@@ -297,7 +297,7 @@ Measurements reveal that wave-in-ice interactions remain intense in 100\% sea-ic
         <h1 class="unnumbered" id="abs:2" , align="center"> Flexural gravity wave motion over multiple sinusoidal seabeds </h1>
         <p align="center"> <strong> Neha Bisht, </strong></span>, Pawan Negi and Trilochan Sahoo;<br />
             Dept. of ocean engineering and naval architecture, IIT Kharagpur, 21302, India
-            <center><a href="mailto:bishti.neha@gmail.com" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;">adfraser@utas.edu.au</a></span></br></center>
+            <center><a href="mailto:bishti.neha@gmail.com" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;">bishti.neha@gmail.com</a></span></br></center>
         <p align="center"> Abstract </p>
         <div style="font-family: 'Times New Roman'; font-size: 20px ; text-align: justify;">             
 The growing effects of global warming and rising sea levels have increased interest in studying the interaction between gravity waves and floating ice sheets in Polar Regions. This area of research is analogous to the interaction between surface gravity waves and very large floating structures (VLFSs) since both ice sheets and VLFSs are modeled as thin elastic plates. Examining the hydrodynamic performance of these floating structures is essential due to their widespread application in the utilisation of ocean space for both humanitarian and technical purposes. A lot of current research is focused on wave-structure interaction problems with man-made seabed structures for technical purposes. On the other hand, not as much research has been done to understand how natural features like sand ripples and bars affect flexural gravity waves. The interaction of incident progressive waves with undulated sandbars results in resonant conditions leading to the formation of triads. The multi-scale method is used to derive the envelope equations for flexural gravity waves, which are subsequently used to understand the role of detuned frequency to account for the Bragg resonance. The study reveals in the presence of a detuned frequency the occurrence of a cut-off frequency, below which wave reflection is monotonic and above which it becomes oscillatory. However, Bragg scattering occurs in the presence of multiple sinusoidal patches, having harmonic and sub-harmonic peaks in wave reflection. Subsequently, the scattering coefficients are analysed in the context of flexural gravity waves across a spectrum of physical parameters involving the floating ice sheet and sea bed configurations. Further studies are being attempted to enhance the understanding of flexural gravity wave propagation over sinusoidal beds of varied configurations.        </div>
@@ -307,67 +307,24 @@ The growing effects of global warming and rising sea levels have increased inter
         <h1 class="unnumbered" id="abs:3" , align="center"> Oblique wave scattering by dual inverse -type breakwaters beneath an ice-covered
 ocean </h1>
         <p align="center"><span> <strong> Biman Sarka$^{1}$ </strong></span>, Soumen De$^{2}$, Chia-Cheng Tsai$^{3}$, Tai-Wen Hsu$^{4}$; <br />
-            1: Center of Excellence for Ocean Engineering, National Taiwan Ocean University, Keelung, 202301, Taiwan; \\
-2: Department of Applied Mathematics, University of Calcutta, 92, A.P.C. Road, Kolkata, 700009, India; \\
-3: Bachelor Degree Program in Ocean Engineering and Technology, Keelung, 202301, Taiwan; \\
-4: Department of Harbour and River Engineering, National Taiwan Ocean University, Keelung 202301, Taiwan\\
-            <center><a href="mailto:susamboral@outlook.com" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;">sturova_i_v@mail.ru</a></span></br></center>
+         <p>   1: Center of Excellence for Ocean Engineering, National Taiwan Ocean University, Keelung, 202301, Taiwan; </p>
+<p>2: Department of Applied Mathematics, University of Calcutta, 92, A.P.C. Road, Kolkata, 700009, India; </p>
+<p>3: Bachelor Degree Program in Ocean Engineering and Technology, Keelung, 202301, Taiwan; </p>
+<p> 4: Department of Harbour and River Engineering, National Taiwan Ocean University, Keelung 202301, Taiwan.</p>
+            <center><a href="mailto:biman228sarkar@gmail.com" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;">biman228sarkar@gmail.com</a></span></br></center>
         <p align="center"> Abstract </p>
         <div style="font-family: 'Times New Roman'; font-size: 20px ; text-align: justify;">
-            <p>The processes of generation, development, and propagation of spatial
-                flexural-gravity waves are well studied now taking into consideration
-                the case when a fluid in an undisturbed state is at rest or flows at
-                constant speed. However, in real sea conditions, the vertical
-                distribution of current velocity in some cases shows significant changes
-                in magnitude and direction with the depth. This fact indicates that the
-                study of flexural-gravity waves should be also carried out within the
-                framework of such theoretical models that take into account the vertical
-                structure of currents.</p>
-            <p>In the present study, the behavior of an ice cover on the surface of
-                an ideal incompressible fluid of finite depth under the action of a
-                pressure domain that moves rectilinearly at constant velocity in the
-                presence of a linear shear current in the near-surface layer is studied.
-                The fluid flow is not potential. The ice cover is modeled by a thin
-                elastic plate with account for uniform compression. The motion of a load
-                can occur at an arbitrary angle to the direction of current. It is
-                assumed that the ice deflection is steady in the coordinate system
-                moving with the load. The Fourier transform method is used within the
-                framework of the linear wave theory. The critical velocities, the
-                deflection of ice cover and wave forces acting on a moving load are
-                studied depending on the thickness of shear layer, the current velocity
-                gradient, the direction of load motion, and the compression ratio of the
-                ice cover.</p>
+            <p>In the present study, the linear theory for flexural gravity waves impinging obliquely on dual inverse Π-type breakwaters, which are bottom standing structures consist of a pair of thin vertical plates extending upward, is examined in finite fluid-depth. The study’s primary aim is to investigate the effect of adding two vertical thin plates with a rectangular structure beneath an ice-covered water surface. The ice cover is modeled as a thin, flexible plate of uniform thickness, assuming the Euler–Bernoulli beam equation governs its motion. To tackle this boundary value problem, a system of Fredholm-type integral equations is derived, utilizing mode-coupling relations. The multi-term Galerkin method is employed to solve the equations, effectively addressing the half singularities at the sharp submerged edges of the thin plates. Chebyshev polynomials, multiplied by associated weight functions, are selected as the basis functions for the Galerkin technique, ensuring convergence of the solution. This approach enables a detailed exploration of wave interaction with the breakwater-ice system under a variety of structural parameters. The study examines key physical quantities, including the reflection coefficient, transmission coefficient, and horizontal wave force. These quantities are computed and analyzed across various configurations to understand their behavior and sensitivity to structural changes. To ensure the accuracy and reliability of the results, comparisons are made with existing studies for several limiting cases, confirming the validity of the findings. A comparative analysis between inverse Π-type and conventional rectangular breakwaters reveals that adding thin plates on either side of a rectangular breakwater significantly enhances its wave-scattering efficiency. The study reveals that Bragg resonance effects depend on both the thickness of the ice sheet and the submergence gap between the ice-covered surface and the breakwater. The ice cover's thickness, in particular, plays a critical role in improving the breakwater’s performance: as the ice sheet thickness increases, the surface displacement amplitude in the transmitted wave region diminishes, while the wavelength remains unchanged. Furthermore, the study demonstrates that the addition of these thin plates results in a marked reduction in surface displacement amplitude within the transmitted region, thus creating an ideal tranquil zone. These results highlight the potential of dual inverse Π-type breakwaters to effectively scatter waves while offering significant benefits in coastal protection, particularly in ice-covered regions. The findings offer practical insights for the design and deployment of more effective wave-interaction structures in real-world marine environments.</p>
         </div>
 
 
-        <h1 class="unnumbered" id="abs:4" , align="center"> On transitions in water wave
-            propagation through consolidated to broken sea ice covers</h1>
-        <p align="center"> <span><strong>Luke Bennetts</strong></span>, Jordan Pitt;<br />
-            University of Adelaide, Australia
-            <center><a href="mailto:susamboral@outlook.com" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;"> luke.bennetts@adelaide.edu.au</a></span></br></center>
+        <h1 class="unnumbered" id="abs:4" , align="center"> Mathematical Modeling of the Viscoelastic Floating Flexible Membrane Placed Over Variable Bathymetry Regions Under Oblique Water Waves </h1>
+        <p align="center"> <span><strong> Kailash Chand Swami </strong></span> and Santanu Koley<br />
+            Birla Institute of Technology and Science-Pilani, Hyderabad Campus Telangana India 500078
+            <center><a href="mailto:kswami1096@gmail.comm" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;"> kswami1096@gmail.com </a></span></br></center>
         <p align="center"> Abstract </p>
         <div style="font-family: 'Times New Roman'; font-size: 20px ; text-align: justify;">
-            <p>A theoretical model is used to study changes in water waves propagating
-                into and through a region containing thin floating ice, for ice covers
-                transitioning from consolidated (large floe sizes) to fully broken
-                (small floe sizes). The degree of breaking is simulated by a mean floe
-                length. It is shown that there are deterministic limits for consolidated
-                and fully broken ice covers, in which the wave fields do not depend on
-                the particular realisation of the floe field for a given mean floe
-                length. The consolidated ice limit is consistent with classic
-                flexural-gravity wave theory, and the fully broken limit is modelled by
-                Bloch waves in a periodic floe field. The transition between the limits
-                shows that the wave field depends on the floe field realization, as
-                multiple wave scattering is a dominant process. The effects of the ice
-                cover on the wave field are quantified using a wavelength, attenuation
-                rate, and a transferred amplitude that represents the amplitude drop at
-                the ice edge. It is shown that as the ice cover breaks up (mean floe
-                size gets smaller), the wavelength decreases, the attenuation rate
-                increases and the amplitude drop decreases (transferred amplitude
-                increases). Dispersion relations are investigated in the consolidated,
-                fully broken and transition regions, and compared to classic models. The
-                results are consistent with physical models and provide a new
-                interpretation of field observations.</p>
+            <p> This study examines the scattering of obliquely incident water waves by a horizontal floating flexible, permeable viscoelastic membrane in finite water depth and placed over variable rigid seabed topography in the context of three-dimensional linear water wave theory. The physical problem when a partially reflection vertical seawall is placed downstream of the membrane is also considered. The problem is studied under the potential water wave theory assumption, with two types of variable bottom topographies. The eigenfunction expansion-boundary element method is used to derive the different results based on different physical and structural parameters. Also, the finite difference method is coupled with the boundary element method to handle the membrane's dynamic boundary condition containing a second-order derivative. The accuracy of the numerical results is verified by deriving and using energy balance relations for water wave scattering by floating flexible porous membrane and when a vertical partial reflection wall is situated downstream of the membrane. This study examines the impact of sinusoidally varying bottom topography, membrane's damping parameter, and incident wave heading angle on the different wave transformation characteristics. The results of the present investigation indicate that the viscoelastic characteristics of the membrane contribute to extending its lifespan and can be utilized to create a calm zone on the lee side of the membrane barriers.</p>
         </div>
 
         <h1 class="unnumbered" id="abs:5" , align="center"> Frequency downshifting in the envelope
