--- a/index.html
+++ b/index.html
@@ -244,9 +244,7 @@ body {
 <p style="page-break-after: always;">&nbsp;</p>
 
     <body style="font-family: 'Times New Roman'; font-size: 14px">
-        <h2 align="center">Table of Contents</h2>
-	<a href="#schedule"> Programme schedule </a>
-      <h3 align="center"> Accepted abstracts</h3>
+        <h2 align="center">List of accepted abstracts</h2>
         <a href="#abs:1"> Evaluation of ice dissipation parameterizations in spectral ocean wave model
 WAVEWATCH III: An intercomparison analysis</a> </br>
         <strong>Fabien Montiel</strong> . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . </p> 
@@ -287,11 +285,8 @@ WAVEWATCH III: An intercomparison analysis </h1>
         <center><a href="mailto:fabien.montiel@otago.ac.nz" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;">fabien.montiel@otago.ac.nz</a></span></br></center>
         <p align="center"> Abstract </p>
         <div style="font-family: 'Times New Roman'; font-size: 20px ; text-align: justify;">
-            Waves-in-ice measurements are presented, obtained with a shipborne stereoscopic camera system in the Antarctic marginal ice zone during an extreme polar cyclone.
-Data show large waves, significant wave height $\approx$5m 45 km in from the ice edge in 100\% sea-ice comprised of pancake floes (60\%) and interstitial frazil ice (40\%), and linear wave decay  ($\approx$0.72\%km$^{-1}$).
-The dominant component of wave energy shifts towards longer periods as waves propagate deeper into sea ice, the spectrum becomes narrower in frequency and broader in direction.
-Individual waves up to 8m high are observed $\approx$50 km in from the sea-ice edge, the largest wave measured in 100\% sea-ice, but consistent with occurrence probability predicted by linear wave theory.
-Measurements reveal that wave-in-ice interactions remain intense in 100\% sea-ice.        </div>
+           <p>
+        Waves-in-ice measurements are presented, obtained with a shipborne stereoscopic camera system in the Antarctic marginal ice zone during an extreme polar cyclone. Data show large waves, significant wave height &approx;5m 45 km in from the ice edge in 100% sea-ice comprised of pancake floes (60%) and interstitial frazil ice (40%), and linear wave decay (&approx;0.72%km<sup>-1</sup>). The dominant component of wave energy shifts towards longer periods as waves propagate deeper into sea ice, the spectrum becomes narrower in frequency and broader in direction. Individual waves up to 8m high are observed &approx;50 km in from the sea-ice edge, the largest wave measured in 100% sea-ice, but consistent with occurrence probability predicted by linear wave theory. Measurements reveal that wave-in-ice interactions remain intense in 100% sea-ice.   </div>
         </p>
 
         <h1 class="unnumbered" id="abs:2" , align="center"> Flexural gravity wave motion over multiple sinusoidal seabeds </h1>
@@ -306,7 +301,7 @@ The growing effects of global warming and rising sea levels have increased inter
 
         <h1 class="unnumbered" id="abs:3" , align="center"> Oblique wave scattering by dual inverse -type breakwaters beneath an ice-covered
 ocean </h1>
-        <p align="center"><span> <strong> Biman Sarka$^{1}$ </strong></span>, Soumen De$^{2}$, Chia-Cheng Tsai$^{3}$, Tai-Wen Hsu$^{4}$; <br />
+        <p align="center"><span> <strong> Biman Sarkar<sup>1</sup> </strong></span>, Soumen De<sup>2</sup>, Chia-Cheng Tsai<sup>3</sup>, Tai-Wen Hsu<sup>4</sup>; <br />
          <p>   1: Center of Excellence for Ocean Engineering, National Taiwan Ocean University, Keelung, 202301, Taiwan; </p>
 <p>2: Department of Applied Mathematics, University of Calcutta, 92, A.P.C. Road, Kolkata, 700009, India; </p>
 <p>3: Bachelor Degree Program in Ocean Engineering and Technology, Keelung, 202301, Taiwan; </p>
@@ -412,8 +407,8 @@ air. This study can be extended to understand the flow stability below other lar
         </div>
 
         <h1 class="unnumbered" id="abs:11" , align="center"> Motion of Submerged Body in a Frozen Channel with Compressed Porous Ice</h1>
-        <p align="center"><span><strong>Tatyana Sibiryakova1</strong></span>, Kristina Naydenova1, Kirill Serykh1, Tatyana Khabakhpasheva2,3;<br />
-          <p>  1Department of Differential Equations, Altai State University, 656049 Barnaul, Russia;</p>
+        <p align="center"><span><strong>Tatyana Sibiryakova<sup>1</sup></strong></span>, Kristina Naydenova<sup>1</sup>, Kirill Serykh<sup>1</sup>, Tatyana Khabakhpasheva<sup>2,3</sup>;<br />
+          <p>  1 Department of Differential Equations, Altai State University, 656049 Barnaul, Russia;</p>
 <p> 2 Lavrentyev Institute of Hydrodynamics SB RAS, 630090 Novosibirsk, Russia;</p>
 <p> 3 School of Engineering, Mathematics and Physics, University of East Anglia, Norwich NR4 7TJ, UK</p>
             <center><a href="mailto:sibiriakova.tatiana@mail.ru" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #007C89;font-weight: normal;text-decoration: underline;"> sibiriakova.tatiana@mail.ru </a></span></br></center>
